package client

import (
	"context"
	"fmt"
	"log"
	"time"
	orderv1 "zjMall/gen/go/api/proto/order"
	"zjMall/internal/common/middleware"

	"google.golang.org/grpc"
	"google.golang.org/grpc/credentials/insecure"
	"google.golang.org/grpc/keepalive"
	"google.golang.org/grpc/metadata"
)

// OrderClient è®¢å•æœåŠ¡å®¢æˆ·ç«¯æ¥å£
type OrderClient interface {
	// GetOrder è·å–è®¢å•ä¿¡æ¯ï¼ˆä¸æ ¡éªŒç”¨æˆ·IDï¼Œç”¨äºæ”¯ä»˜å›è°ƒç­‰åœºæ™¯ï¼‰
	GetOrderByNo(ctx context.Context, orderNo string) (*orderv1.Order, error)
	// MarkOrderPaid æ ‡è®°è®¢å•å·²æ”¯ä»˜
	MarkOrderPaid(ctx context.Context, orderNo, payChannel, payTradeNo string) error
	// Close å…³é—­è¿æ¥
	Close() error
}

type orderClient struct {
	conn   *grpc.ClientConn
	client orderv1.OrderServiceClient
}

// NewOrderClient åˆ›å»ºè®¢å•æœåŠ¡å®¢æˆ·ç«¯
func NewOrderClient(addr string) (OrderClient, error) {
	opts := []grpc.DialOption{
		grpc.WithTransportCredentials(insecure.NewCredentials()),
		grpc.WithKeepaliveParams(keepalive.ClientParameters{
			Time:                30 * time.Second,
			Timeout:             5 * time.Second,
			PermitWithoutStream: false,
		}),
	}

	ctx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
	defer cancel()

	conn, err := grpc.DialContext(ctx, addr, opts...)
	if err != nil {
		return nil, fmt.Errorf("è¿æ¥è®¢å•æœåŠ¡å¤±è´¥: %w", err)
	}

	client := orderv1.NewOrderServiceClient(conn)

	log.Printf("âœ… è®¢å•æœåŠ¡å®¢æˆ·ç«¯è¿æ¥æˆåŠŸ: %s", addr)

	return &orderClient{
		conn:   conn,
		client: client,
	}, nil
}

// GetOrderByNo è·å–è®¢å•ä¿¡æ¯ï¼ˆä¸æ ¡éªŒç”¨æˆ·IDï¼‰
func (c *orderClient) GetOrderByNo(ctx context.Context, orderNo string) (*orderv1.Order, error) {
	ctx, cancel := context.WithTimeout(ctx, 3*time.Second)
	defer cancel()

	// ä» context ä¸­è·å– userIDï¼ˆå¦‚æœæœ‰çš„è¯ï¼Œç”¨äºæ—¥å¿—ï¼‰
	userID := middleware.GetUserIDFromContext(ctx)
	if userID != "" {
		md := metadata.New(map[string]string{
			string(middleware.UserIDKey): userID,
		})
		ctx = metadata.NewOutgoingContext(ctx, md)
	}

	log.Printf("ğŸ” [OrderClient] GetOrderByNo: orderNo=%s", orderNo)

	resp, err := c.client.GetOrder(ctx, &orderv1.GetOrderRequest{
		OrderNo: orderNo,
	})
	if err != nil {
		return nil, fmt.Errorf("è°ƒç”¨è®¢å•æœåŠ¡å¤±è´¥: %w", err)
	}
	if resp.Code != 0 {
		return nil, fmt.Errorf("è®¢å•æœåŠ¡è¿”å›é”™è¯¯: code=%d, message=%s", resp.Code, resp.Message)
	}
	if resp.Order == nil {
		return nil, fmt.Errorf("è®¢å•ä¸å­˜åœ¨")
	}
	return resp.Order, nil
}

// MarkOrderPaid æ ‡è®°è®¢å•å·²æ”¯ä»˜
func (c *orderClient) MarkOrderPaid(ctx context.Context, orderNo, payChannel, payTradeNo string) error {
	ctx, cancel := context.WithTimeout(ctx, 3*time.Second)
	defer cancel()

	log.Printf("ğŸ” [OrderClient] MarkOrderPaid: orderNo=%s, payChannel=%s, payTradeNo=%s", orderNo, payChannel, payTradeNo)

	resp, err := c.client.MarkOrderPaid(ctx, &orderv1.MarkOrderPaidRequest{
		OrderNo:    orderNo,
		PayChannel: payChannel,
		PayTradeNo: payTradeNo,
	})
	if err != nil {
		return fmt.Errorf("è°ƒç”¨è®¢å•æœåŠ¡å¤±è´¥: %w", err)
	}
	if resp.Code != 0 {
		return fmt.Errorf("è®¢å•æœåŠ¡è¿”å›é”™è¯¯: code=%d, message=%s", resp.Code, resp.Message)
	}
	return nil
}

// Close å…³é—­è¿æ¥
func (c *orderClient) Close() error {
	if c.conn != nil {
		return c.conn.Close()
	}
	return nil
}
