package service

import (
	"context"
	"encoding/json"
	"fmt"
	"log"
	"math/rand"
	"strconv"
	"strings"
	"time"

	paymentv1 "zjMall/gen/go/api/proto/payment"
	"zjMall/internal/common/cache"
	"zjMall/internal/common/client"
	"zjMall/internal/common/lock"
	"zjMall/internal/common/middleware"
	"zjMall/internal/common/mq"
	"zjMall/internal/payment-service/model"
	"zjMall/internal/payment-service/repository"

	"google.golang.org/protobuf/types/known/timestamppb"
)

const (
	PaymentTokenCacheKeyPrefix       = "payment:token"
	PaymentTokenCacheExpireSeconds   = 300                  // Tokenæœ‰æ•ˆæœŸ5åˆ†é’Ÿ
	PaymentIdempotencyKeyPrefix      = "payment:idempotent" // å¹‚ç­‰æ€§keyå‰ç¼€
	PaymentIdempotencyExpireSeconds  = 300                  // å¹‚ç­‰æ€§keyæœ‰æ•ˆæœŸ5åˆ†é’Ÿ
	PaymentLockKeyPrefix             = "payment:lock"
	PaymentLockExpireSeconds         = 300                           // é”æœ‰æ•ˆæœŸ5åˆ†é’Ÿ
	CallBackIdempotencyKeyPrefix     = "payment:callback:idempotent" // å›è°ƒå¹‚ç­‰æ€§keyå‰ç¼€
	CallBackIdempotencyExpireSeconds = 300                           // å›è°ƒå¹‚ç­‰æ€§keyæœ‰æ•ˆæœŸ5åˆ†é’Ÿ
	PaySuccessNotifyTopic            = "payment:success:notify"
)

// PaymentService æ”¯ä»˜æœåŠ¡
type PaymentService struct {
	paymentRepo        repository.PaymentRepository
	paymentLogRepo     repository.PaymentLogRepository
	paymentChannelRepo repository.PaymentChannelRepository
	paymentTimeout     time.Duration // æ”¯ä»˜è¶…æ—¶æ—¶é—´ï¼Œé»˜è®¤30åˆ†é’Ÿ
	orderClient        client.OrderClient
	cacheRepo          cache.CacheRepository
	lockService        lock.DistributedLockService
	paymentMQ          mq.MessageProducer
	outboxRepo         repository.PaymentOutboxRepository
}

// NewPaymentService åˆ›å»ºæ”¯ä»˜æœåŠ¡
func NewPaymentService(
	paymentRepo repository.PaymentRepository,
	paymentLogRepo repository.PaymentLogRepository,
	paymentChannelRepo repository.PaymentChannelRepository,
	orderClient client.OrderClient,
	cacheRepo cache.CacheRepository,
	paymentTimeout time.Duration,
	lockService lock.DistributedLockService,
	paymentMQ mq.MessageProducer,
	outboxRepo repository.PaymentOutboxRepository,
) *PaymentService {
	return &PaymentService{
		paymentRepo:        paymentRepo,
		paymentLogRepo:     paymentLogRepo,
		paymentChannelRepo: paymentChannelRepo,
		paymentTimeout:     paymentTimeout,
		orderClient:        orderClient,
		cacheRepo:          cacheRepo,
		lockService:        lockService,
		paymentMQ:          paymentMQ,
		outboxRepo:         outboxRepo,
	}
}

// CreatePaymentRequest åˆ›å»ºæ”¯ä»˜å•è¯·æ±‚
type CreatePaymentRequest struct {
	OrderNo    string
	UserID     string
	Amount     float64
	PayChannel string
	ReturnURL  string
}

// CreatePayment åˆ›å»ºæ”¯ä»˜å•
// æ³¨æ„ï¼šå‚æ•°æ ¡éªŒåº”è¯¥åœ¨ handler å±‚å®Œæˆï¼Œservice å±‚åªåšä¸šåŠ¡é€»è¾‘æ ¡éªŒ
func (s *PaymentService) CreatePayment(ctx context.Context, req *paymentv1.CreatePaymentRequest) (*paymentv1.CreatePaymentResponse, error) {
	//è·å–userId
	userId := middleware.GetUserIDFromContext(ctx)
	if userId == "" {
		return nil, fmt.Errorf("ç”¨æˆ·æœªç™»å½•")
	}
	// å¹‚ç­‰æ€§keyï¼šåŸºäºç”¨æˆ·IDå’Œè®¢å•å·ï¼ˆä¸ä¾èµ–tokenï¼Œå› ä¸ºtokenå¯èƒ½ä¸ºç©ºï¼‰
	idempotencyKey := fmt.Sprintf("%s:%s:%s", PaymentIdempotencyKeyPrefix, userId, req.Token)

	// å…ˆæ£€æŸ¥å¹‚ç­‰æ€§keyæ˜¯å¦å­˜åœ¨ï¼ˆå¿«é€Ÿè·¯å¾„ï¼‰
	existingPaymentNo, err := s.cacheRepo.Get(ctx, idempotencyKey)
	if err == nil && existingPaymentNo != "" {
		// å¹‚ç­‰æ€§keyå­˜åœ¨ï¼Œè¯´æ˜å·²ç»åˆ›å»ºè¿‡æ”¯ä»˜å•ï¼Œç›´æ¥æŸ¥è¯¢å¹¶è¿”å›
		existingPayment, err := s.paymentRepo.GetPaymentByPaymentNo(ctx, existingPaymentNo)
		if err == nil && existingPayment != nil {
			return &paymentv1.CreatePaymentResponse{
				Code:    0,
				Message: "success",
				Payment: s.convertPaymentToProto(existingPayment),
			}, nil
		}
	}

	// è·å–åˆ†å¸ƒå¼é”ï¼ˆåŸºäºè®¢å•å·ï¼Œé˜²æ­¢åŒä¸€è®¢å•å¹¶å‘åˆ›å»ºï¼‰
	lockKey := fmt.Sprintf("%s:%s", PaymentLockKeyPrefix, req.OrderNo)
	acquired, err := s.lockService.AcquireLock(ctx, lockKey, time.Duration(PaymentLockExpireSeconds)*time.Second)
	if err != nil {
		return nil, fmt.Errorf("è·å–åˆ†å¸ƒå¼é”å¤±è´¥: %w", err)
	}
	if !acquired {
		return nil, fmt.Errorf("ç³»ç»Ÿç¹å¿™ï¼Œè¯·ç¨åé‡è¯•")
	}
	defer s.lockService.ReleaseLock(ctx, lockKey)

	// è·å–é”åå†æ¬¡æ£€æŸ¥å¹‚ç­‰æ€§keyï¼ˆåŒé‡æ£€æŸ¥ï¼Œé˜²æ­¢å¹¶å‘ï¼‰
	existingPaymentNo, err = s.cacheRepo.Get(ctx, idempotencyKey)
	if err == nil && existingPaymentNo != "" {
		existingPayment, err := s.paymentRepo.GetPaymentByPaymentNo(ctx, existingPaymentNo)
		if err == nil && existingPayment != nil {
			return &paymentv1.CreatePaymentResponse{
				Code:    0,
				Message: "success",
				Payment: s.convertPaymentToProto(existingPayment),
			}, nil
		}
	}

	//é¦–å…ˆæŸ¥çœ‹è®¢å•
	order, err := s.orderClient.GetOrderByNo(ctx, req.OrderNo)
	if err != nil {
		return nil, fmt.Errorf("æŸ¥è¯¢è®¢å•å¤±è´¥: %w", err)
	}
	if order == nil {
		return nil, fmt.Errorf("è®¢å•ä¸å­˜åœ¨: %s", req.OrderNo)
	}
	//æ£€æŸ¥è®¢å•æ˜¯å¦ä¸ºå¾…æ”¯ä»˜çŠ¶æ€
	if int8(order.Status) != model.PaymentStatusPending {
		return nil, fmt.Errorf("è®¢å•çŠ¶æ€ä¸æ­£ç¡®: %s", req.OrderNo)
	}
	//æ£€æŸ¥è®¢å•æ”¯ä»˜é‡‘é¢æ˜¯å¦å¤§äº0
	payAmount, err := strconv.ParseFloat(order.PayAmount, 64)
	if err != nil {
		return nil, fmt.Errorf("è®¢å•æ”¯ä»˜é‡‘é¢æ ¼å¼é”™è¯¯: %w", err)
	}
	if payAmount <= 0 {
		return nil, fmt.Errorf("è®¢å•æ”¯ä»˜é‡‘é¢ä¸èƒ½å°äº0")
	}
	// æ£€æŸ¥æ˜¯å¦å·²å­˜åœ¨æ”¯ä»˜å•ï¼ˆå¹‚ç­‰æ€§ä¿éšœï¼‰
	existingPayment, err := s.paymentRepo.GetPaymentByOrderNo(ctx, req.OrderNo)
	if err != nil {
		return nil, fmt.Errorf("æŸ¥è¯¢æ”¯ä»˜å•å¤±è´¥: %w", err)
	}
	if existingPayment != nil {
		// å¦‚æœå·²å­˜åœ¨ä¸”çŠ¶æ€ä¸ºå¾…æ”¯ä»˜ï¼Œç›´æ¥è¿”å›ï¼ˆå¹‚ç­‰å¤„ç†ï¼‰
		if existingPayment.Status == model.PaymentStatusPending {
			return &paymentv1.CreatePaymentResponse{
				Code:    0,
				Message: "success",
				Payment: s.convertPaymentToProto(existingPayment),
			}, nil
		}
		// å¦‚æœå·²å­˜åœ¨ä½†çŠ¶æ€ä¸æ˜¯å¾…æ”¯ä»˜ï¼Œè¿”å›é”™è¯¯
		return nil, fmt.Errorf("è®¢å•å·²å­˜åœ¨æ”¯ä»˜å•ï¼ŒçŠ¶æ€ä¸º: %d", existingPayment.Status)
	}
	// æ£€éªŒæ”¯ä»˜æ¸ é“æ˜¯å¦æœ‰æ•ˆï¼ˆreq.PayChannel æ˜¯å­—ç¬¦ä¸²ï¼Œç›´æ¥ä½¿ç”¨ï¼‰
	paymentChannel, err := s.paymentChannelRepo.GetPaymentChannelByChannelCode(ctx, req.PayChannel)
	if err != nil {
		return nil, fmt.Errorf("æŸ¥è¯¢æ”¯ä»˜æ¸ é“å¤±è´¥: %w", err)
	}
	if paymentChannel == nil {
		return nil, fmt.Errorf("æ”¯ä»˜æ¸ é“ä¸å­˜åœ¨: %s", req.PayChannel)
	}
	//ç”Ÿæˆæ”¯ä»˜å•å·
	paymentNo := s.generatePaymentNo()
	expiredAt := time.Now().Add(s.paymentTimeout)
	// åˆ›å»ºæ”¯ä»˜å•
	payment := &model.Payment{
		PaymentNo:  paymentNo,
		OrderNo:    req.OrderNo,
		UserID:     userId,
		Amount:     payAmount,
		PayChannel: paymentChannel.ChannelCode, // ä½¿ç”¨æ¸ é“ä»£ç ï¼Œä¸æ˜¯åç§°
		Status:     model.PaymentStatusPending,
		NotifyURL:  paymentChannel.NotifyURL,
		ReturnURL:  req.ReturnUrl, // ä½¿ç”¨è¯·æ±‚ä¸­çš„è¿”å›åœ°å€ï¼Œå¦‚æœæ²¡æœ‰åˆ™ä½¿ç”¨æ¸ é“é…ç½®çš„
		ExpiredAt:  &expiredAt,    //TODO:å®šæ—¶ä»»åŠ¡å¤„ç†å—ï¼Ÿ
		Version:    1,
	}

	if err := s.paymentRepo.CreatePayment(ctx, payment); err != nil {
		// æ£€æŸ¥æ˜¯å¦æ˜¯å”¯ä¸€ç´¢å¼•å†²çªï¼ˆå¹¶å‘åˆ›å»ºï¼‰
		if isDuplicateKeyError(err) {
			// é‡æ–°æŸ¥è¯¢å·²å­˜åœ¨çš„æ”¯ä»˜å•
			existingPayment, _ := s.paymentRepo.GetPaymentByOrderNo(ctx, req.OrderNo)
			if existingPayment != nil {
				return &paymentv1.CreatePaymentResponse{
					Code:    0,
					Message: "success",
					Payment: s.convertPaymentToProto(existingPayment),
				}, nil
			}
		}
		return nil, fmt.Errorf("åˆ›å»ºæ”¯ä»˜å•å¤±è´¥: %w", err)
	}

	// è®°å½•æ”¯ä»˜æ—¥å¿—
	log := &model.PaymentLog{
		PaymentNo: paymentNo,
		OrderNo:   req.OrderNo,
		UserID:    userId,
		Action:    model.PaymentLogActionCreate,
		Channel:   paymentChannel.ChannelCode,
		Amount:    payAmount,
	}
	if err := s.paymentLogRepo.CreatePaymentLog(ctx, log); err != nil {
		fmt.Printf("âš ï¸ è®°å½•æ”¯ä»˜æ—¥å¿—å¤±è´¥: %v\n", err)
	}

	// ç”Ÿæˆæ”¯ä»˜å‚æ•°ï¼ˆå­¦ä¹ æ¨¡å¼ï¼šæ¨¡æ‹Ÿæ”¯ä»˜å‚æ•°ï¼Œä¾¿äºå¼€å‘å’Œæµ‹è¯•ï¼‰
	// åœ¨å®é™…ç”Ÿäº§ç¯å¢ƒä¸­ï¼Œè¿™é‡Œåº”è¯¥è°ƒç”¨ç¬¬ä¸‰æ–¹æ”¯ä»˜SDKï¼ˆå¦‚æ”¯ä»˜å®ã€å¾®ä¿¡æ”¯ä»˜ï¼‰
	payURL, qrCode, payParams := s.generatePaymentParamsForLearning(payment, paymentChannel)

	// è®¾ç½®å¹‚ç­‰æ€§keyï¼ˆå­˜å‚¨æ”¯ä»˜å•å·ï¼Œæœ‰æ•ˆæœŸ5åˆ†é’Ÿï¼‰
	// è¿™æ ·åç»­ç›¸åŒè¯·æ±‚å¯ä»¥ç›´æ¥è¿”å›å·²åˆ›å»ºçš„æ”¯ä»˜å•
	if err := s.cacheRepo.Set(ctx, idempotencyKey, paymentNo, time.Duration(PaymentIdempotencyExpireSeconds)*time.Second); err != nil {
		fmt.Printf("âš ï¸ è®¾ç½®å¹‚ç­‰æ€§keyå¤±è´¥: %v\n", err)
		// ä¸å½±å“ä¸»æµç¨‹ï¼Œç»§ç»­è¿”å›
	}
	go func() {
		//TODO:å¼‚æ­¥è°ƒç”¨æ”¯ä»˜ç½‘å…³

	}()

	return &paymentv1.CreatePaymentResponse{
		Code:      0,
		Message:   "success",
		Payment:   s.convertPaymentToProto(payment),
		PayUrl:    payURL,
		QrCode:    qrCode,
		PayParams: payParams,
	}, nil
}

// GetPayment æŸ¥è¯¢æ”¯ä»˜å•
func (s *PaymentService) GetPayment(ctx context.Context, paymentNo string) (*model.Payment, error) {
	if paymentNo == "" {
		return nil, fmt.Errorf("æ”¯ä»˜å•å·ä¸èƒ½ä¸ºç©º")
	}

	payment, err := s.paymentRepo.GetPaymentByPaymentNo(ctx, paymentNo)
	if err != nil {
		return nil, fmt.Errorf("æŸ¥è¯¢æ”¯ä»˜å•å¤±è´¥: %w", err)
	}

	return payment, nil
}

// PaymentCallbackRequest æ”¯ä»˜å›è°ƒè¯·æ±‚
type PaymentCallbackRequest struct {
	PayChannel  string
	PaymentNo   string
	TradeNo     string
	Amount      string
	Status      string
	Sign        string
	ExtraParams map[string]string
}

// HandlePaymentCallback å¤„ç†æ”¯ä»˜å›è°ƒ
func (s *PaymentService) HandlePaymentCallback(ctx context.Context, req *PaymentCallbackRequest) error {
	// 1. å‚æ•°æ ¡éªŒ
	if req.PaymentNo == "" {
		return fmt.Errorf("æ”¯ä»˜å•å·ä¸èƒ½ä¸ºç©º")
	}
	if req.TradeNo == "" {
		return fmt.Errorf("ç¬¬ä¸‰æ–¹äº¤æ˜“å·ä¸èƒ½ä¸ºç©º")
	}
	if req.Amount == "" {
		return fmt.Errorf("æ”¯ä»˜é‡‘é¢ä¸èƒ½ä¸ºç©º")
	}
	//å¹‚ç­‰æ€§keyï¼šåŸºäºæ”¯ä»˜å•å·å’Œäº¤æ˜“å·
	idempotencyKey := fmt.Sprintf("%s:%s:%s", CallBackIdempotencyKeyPrefix, req.PaymentNo, req.TradeNo)
	result, err := s.cacheRepo.Get(ctx, idempotencyKey)
	if err == nil && result != "" {
		if result == "SUCCESS" {
			return nil // å·²æˆåŠŸå¤„ç†
		} else if result == "PROCESSING" {
			return fmt.Errorf("æ”¯ä»˜å›è°ƒæ­£åœ¨å¤„ç†ä¸­ï¼Œè¯·å‹¿é‡å¤æäº¤")
		} else {
			return fmt.Errorf("ä¸Šæ¬¡å¤„ç†å¤±è´¥: %s", result)
		}
	}
	if ok, err := s.cacheRepo.SetNX(ctx, idempotencyKey, "PROCESSING", time.Duration(CallBackIdempotencyExpireSeconds)*time.Second); err != nil || !ok {
		log.Printf("âš ï¸ è®¾ç½®å¹‚ç­‰æ€§keyå¤±è´¥: %v\n", err)
		return fmt.Errorf("ç³»ç»Ÿç¹å¿™ï¼Œè¯·ç¨åé‡è¯•")
	}
	//è·å–åˆ†å¸ƒå¼é”ï¼Œé¿å…é‡å¤å›è°ƒ
	lockKey := fmt.Sprintf("%s:%s", PaymentLockKeyPrefix, req.PaymentNo)
	acquired, err := s.lockService.AcquireLock(ctx, lockKey, time.Duration(PaymentLockExpireSeconds)*time.Second)
	if err != nil {
		return fmt.Errorf("è·å–åˆ†å¸ƒå¼é”å¤±è´¥: %w", err)
	}
	if !acquired {
		return fmt.Errorf("ç³»ç»Ÿç¹å¿™ï¼Œè¯·ç¨åé‡è¯•")
	}
	defer s.lockService.ReleaseLock(ctx, lockKey)

	// 2. æŸ¥è¯¢æ”¯ä»˜å•
	payment, err := s.paymentRepo.GetPaymentByPaymentNo(ctx, req.PaymentNo)
	if err != nil {
		return fmt.Errorf("æŸ¥è¯¢æ”¯ä»˜å•å¤±è´¥: %w", err)
	}
	if payment == nil {
		return fmt.Errorf("æ”¯ä»˜å•ä¸å­˜åœ¨: %s", req.PaymentNo)
	}

	// 3. å¹‚ç­‰æ€§æ ¡éªŒï¼šå¦‚æœå·²ç»æ˜¯æ”¯ä»˜æˆåŠŸçŠ¶æ€ï¼Œç›´æ¥è¿”å›æˆåŠŸ
	if payment.Status == model.PaymentStatusSuccess {
		return nil // å¹‚ç­‰å¤„ç†
	}
	//æ£€æŸ¥äº¤æ˜“å·æ˜¯å¦è¢«å…¶ä»–è®¢å•ä½¿ç”¨ï¼ˆé˜²æ­¢é‡å¤å…¥è´¦ï¼‰
	otherPayment, err := s.paymentRepo.GetPaymentByTradeNo(ctx, req.TradeNo)
	if err != nil {
		return fmt.Errorf("æŸ¥è¯¢æ”¯ä»˜å•å¤±è´¥: %w", err)
	}
	if otherPayment != nil && otherPayment.PaymentNo != payment.PaymentNo {
		return fmt.Errorf("äº¤æ˜“å·å·²å­˜åœ¨: %s, æ”¯ä»˜å•å·: %s", req.TradeNo, otherPayment.PaymentNo)
	}
	// 4. ç­¾åæ ¡éªŒï¼ˆTODO: åç»­å®ç°ï¼‰ï¼Œæ ¡éªŒæ˜¯å¦æ˜¯å¹³å°å‘æ¥çš„å›è°ƒï¼Œé˜²æ­¢ä¼ªé€ å›è°ƒ é‡‡ç”¨æ”¯ä»˜å®å…¬é’¥å¯¹ç­¾åè¿›è¡Œæ ¡éªŒ
	// if !s.verifySign(req) {
	//     return fmt.Errorf("ç­¾åæ ¡éªŒå¤±è´¥")
	// }

	// 5. é‡‘é¢æ ¡éªŒ
	callbackAmount, err := strconv.ParseFloat(req.Amount, 64)
	if err != nil {
		return fmt.Errorf("æ”¯ä»˜é‡‘é¢æ ¼å¼é”™è¯¯: %w", err)
	}

	if callbackAmount != payment.Amount {
		// è®°å½•å‘Šè­¦æ—¥å¿—
		log.Printf("âš ï¸ æ”¯ä»˜é‡‘é¢ä¸ä¸€è‡´: payment_no=%s, è®¢å•é‡‘é¢=%.2f, å›è°ƒé‡‘é¢=%.2f\n",
			req.PaymentNo, payment.Amount, callbackAmount)
		return fmt.Errorf("æ”¯ä»˜é‡‘é¢ä¸ä¸€è‡´: è®¢å•é‡‘é¢=%.2f, å›è°ƒé‡‘é¢=%.2f", payment.Amount, callbackAmount)
	}

	// 6. åˆ¤æ–­æ”¯ä»˜çŠ¶æ€
	var newStatus int8
	if req.Status == "success" || req.Status == "SUCCESS" {
		newStatus = model.PaymentStatusSuccess
	} else {
		newStatus = model.PaymentStatusFailed
	}

	// 7. æ›´æ–°æ”¯ä»˜å•çŠ¶æ€ï¼ˆä½¿ç”¨ä¹è§‚é”ï¼‰
	oldStatus := payment.Status
	payment.Status = newStatus
	payment.TradeNo = req.TradeNo
	if newStatus == model.PaymentStatusSuccess {
		now := time.Now()
		payment.PaidAt = &now
	}

	// ä½¿ç”¨ Outbox æ¨¡å¼ï¼šåœ¨ä¸€ä¸ªæœ¬åœ°äº‹åŠ¡ä¸­æ›´æ–°æ”¯ä»˜å•ã€è®°å½•æ—¥å¿—ã€å†™å…¥ Outbox äº‹ä»¶
	if err := s.paymentRepo.WithTransaction(ctx, func(txCtx context.Context, txRepo repository.PaymentRepository) error {
		// 7.1 æ›´æ–°æ”¯ä»˜å•çŠ¶æ€
		if err := txRepo.UpdatePayment(txCtx, payment); err != nil {
			return fmt.Errorf("æ›´æ–°æ”¯ä»˜å•çŠ¶æ€å¤±è´¥: %w", err)
		}

		// 7.2 è®°å½•æ”¯ä»˜æ—¥å¿—
		paymentLog := &model.PaymentLog{
			PaymentNo:  req.PaymentNo,
			OrderNo:    payment.OrderNo,
			UserID:     payment.UserID,
			Action:     model.PaymentLogActionCallback,
			FromStatus: &oldStatus,
			ToStatus:   &newStatus,
			Channel:    req.PayChannel,
			Amount:     payment.Amount,
			TradeNo:    req.TradeNo,
		}
		if err := s.paymentLogRepo.CreatePaymentLog(txCtx, paymentLog); err != nil {
			return fmt.Errorf("è®°å½•æ”¯ä»˜æ—¥å¿—å¤±è´¥: %w", err)
		}

		// 7.3 ä»…åœ¨æ”¯ä»˜æˆåŠŸæ—¶å†™å…¥ Outbox äº‹ä»¶
		if newStatus == model.PaymentStatusSuccess {
			payload := map[string]interface{}{
				"payment_no": payment.PaymentNo,
				"order_no":   payment.OrderNo,
				"user_id":    payment.UserID,
				"amount":     payment.Amount,
				"trade_no":   payment.TradeNo,
				"paid_at":    payment.PaidAt,
			}
			payloadBytes, err := json.Marshal(payload)
			if err != nil {
				return fmt.Errorf("åºåˆ—åŒ–æ”¯ä»˜æˆåŠŸäº‹ä»¶å¤±è´¥: %w", err)
			}

			event := &model.PaymentOutbox{
				EventType:   "payment.succeeded",
				AggregateID: payment.PaymentNo,
				Payload:     string(payloadBytes),
				Status:      repository.OutboxStatusPending,
				RetryCount:  0,
			}

			if err := s.outboxRepo.Create(txCtx, event); err != nil {
				return fmt.Errorf("å†™å…¥æ”¯ä»˜ Outbox äº‹ä»¶å¤±è´¥: %w", err)
			}
		}

		return nil
	}); err != nil {
		return err
	}

	// è®¾ç½®å¹‚ç­‰æ€§keyä¸ºæˆåŠŸï¼ˆæ”¾åœ¨äº‹åŠ¡ä¹‹å¤–ï¼Œå¤±è´¥ä¸å½±å“ä¸»æµç¨‹ï¼‰
	if err := s.cacheRepo.Set(ctx, idempotencyKey, "SUCCESS", 24*time.Hour); err != nil {
		log.Printf("âš ï¸ è®¾ç½®å›è°ƒå¹‚ç­‰æ€§keyå¤±è´¥: %v\n", err)
	}

	return nil
}

// QueryPaymentStatus æŸ¥è¯¢æ”¯ä»˜çŠ¶æ€
func (s *PaymentService) QueryPaymentStatus(ctx context.Context, paymentNo string) (int8, string, error) {
	if paymentNo == "" {
		return 0, "", fmt.Errorf("æ”¯ä»˜å•å·ä¸èƒ½ä¸ºç©º")
	}

	payment, err := s.paymentRepo.GetPaymentByPaymentNo(ctx, paymentNo)
	if err != nil {
		return 0, "", fmt.Errorf("æŸ¥è¯¢æ”¯ä»˜å•å¤±è´¥: %w", err)
	}
	if payment == nil {
		return 0, "", fmt.Errorf("æ”¯ä»˜å•ä¸å­˜åœ¨: %s", paymentNo)
	}
	//TODO:è¶…è¿‡ä¸€å®šæ—¶é—´éœ€è¦å¯¹è´¦å’Œå¼‚å¸¸å¤„ç†
	return payment.Status, payment.TradeNo, nil
}

// CloseExpiredPayments å…³é—­è¶…æ—¶çš„æ”¯ä»˜å•ï¼ˆå®šæ—¶ä»»åŠ¡è°ƒç”¨ï¼‰
func (s *PaymentService) CloseExpiredPayments(ctx context.Context, limit int) error {
	if limit <= 0 {
		limit = 100 // é»˜è®¤æ¯æ¬¡å¤„ç†100æ¡
	}

	// æŸ¥è¯¢è¶…æ—¶çš„æ”¯ä»˜å•
	expiredPayments, err := s.paymentRepo.GetExpiredPayments(ctx, limit)
	if err != nil {
		return fmt.Errorf("æŸ¥è¯¢è¶…æ—¶æ”¯ä»˜å•å¤±è´¥: %w", err)
	}

	for _, payment := range expiredPayments {
		// æ›´æ–°æ”¯ä»˜å•çŠ¶æ€ä¸ºå·²å…³é—­
		oldStatus := payment.Status
		payment.Status = model.PaymentStatusClosed

		if err := s.paymentRepo.UpdatePayment(ctx, payment); err != nil {
			fmt.Printf("âš ï¸ å…³é—­æ”¯ä»˜å•å¤±è´¥: payment_no=%s, err=%v\n", payment.PaymentNo, err)
			continue
		}

		// è®°å½•æ”¯ä»˜æ—¥å¿—
		log := &model.PaymentLog{
			PaymentNo:  payment.PaymentNo,
			OrderNo:    payment.OrderNo,
			UserID:     payment.UserID,
			Action:     model.PaymentLogActionClose,
			FromStatus: &oldStatus,
			ToStatus:   &payment.Status,
			Channel:    payment.PayChannel,
			Amount:     payment.Amount,
		}
		if err := s.paymentLogRepo.CreatePaymentLog(ctx, log); err != nil {
			fmt.Printf("âš ï¸ è®°å½•æ”¯ä»˜æ—¥å¿—å¤±è´¥: %v\n", err)
		}
	}

	return nil
}

// generatePaymentNo ç”Ÿæˆæ”¯ä»˜å•å·
// æ ¼å¼ï¼š{å‰ç¼€(2ä½)}{æ—¥æœŸæ—¶é—´(12ä½)}{éšæœºæ•°(6ä½)}{æ‰©å±•ä½(2ä½)} = æ€»å…±22ä½
func (s *PaymentService) generatePaymentNo() string {
	// ç”Ÿæˆæ—¥æœŸæ—¶é—´å­—ç¬¦ä¸²ï¼ˆ12ä½ï¼šYYYYMMDDHHmmï¼‰
	dateTime := time.Now().Format("200601021504")

	// ç”Ÿæˆ6ä½éšæœºæ•°ï¼ˆ000000-999999ï¼‰
	// ä½¿ç”¨ math/rand ä¸è®¢å•å·ç”Ÿæˆæ–¹å¼ä¿æŒä¸€è‡´
	randomNum := rand.Intn(1000000)

	// ç»„åˆï¼šå‰ç¼€(2) + æ—¥æœŸæ—¶é—´(12) + éšæœºæ•°(6) + æ‰©å±•ä½(2) = 22ä½
	paymentNo := fmt.Sprintf("%s%s%06d00",
		model.PaymentNoPrefix, // 10
		dateTime,              // 202401301430
		randomNum,             // 123456
		// 00 æ‰©å±•ä½å·²åŒ…å«åœ¨æ ¼å¼å­—ç¬¦ä¸²ä¸­
	)

	return paymentNo
}

// GeneratePaymentToken ç”Ÿæˆæ”¯ä»˜å¹‚ç­‰æ€§Token
func (s *PaymentService) GeneratePaymentToken(ctx context.Context, req *paymentv1.GeneratePaymentTokenRequest) (*paymentv1.GeneratePaymentTokenResponse, error) {
	userID := middleware.GetUserIDFromContext(ctx)
	if userID == "" {
		return &paymentv1.GeneratePaymentTokenResponse{
			Code:    1,
			Message: "ç”¨æˆ·æœªç™»å½•",
		}, nil
	}

	token := fmt.Sprintf("%s%s%s", userID, req.OrderNo, time.Now().Format("20060102150405"))

	// Tokenæœ‰æ•ˆæœŸ5åˆ†é’Ÿï¼ˆ300ç§’ï¼‰
	cacheKey := fmt.Sprintf("%s:%s:%s", PaymentTokenCacheKeyPrefix, userID, token)
	set, err := s.cacheRepo.SetNX(ctx, cacheKey, "1", time.Duration(PaymentTokenCacheExpireSeconds)*time.Second)
	if err != nil {
		fmt.Printf("âŒ [PaymentService] GeneratePaymentToken: è®¾ç½®Tokenå¤±è´¥: %v\n", err)
		return &paymentv1.GeneratePaymentTokenResponse{
			Code:    1,
			Message: "ç³»ç»Ÿç¹å¿™ï¼Œè¯·ç¨åé‡è¯•",
		}, nil
	}
	if !set {
		return &paymentv1.GeneratePaymentTokenResponse{
			Code:    1,
			Message: "Tokenå·²å­˜åœ¨ï¼Œè¯·å‹¿é‡å¤ç”Ÿæˆ",
		}, nil
	}

	return &paymentv1.GeneratePaymentTokenResponse{
		Code:          0,
		Message:       "success",
		Token:         token,
		ExpireSeconds: PaymentTokenCacheExpireSeconds,
	}, nil
}

// convertPaymentToProto è½¬æ¢ Payment æ¨¡å‹ä¸º proto æ¶ˆæ¯
func (s *PaymentService) convertPaymentToProto(payment *model.Payment) *paymentv1.Payment {
	if payment == nil {
		return nil
	}

	protoPayment := &paymentv1.Payment{
		Id:         payment.ID,
		PaymentNo:  payment.PaymentNo,
		OrderNo:    payment.OrderNo,
		UserId:     payment.UserID,
		Amount:     fmt.Sprintf("%.2f", payment.Amount),
		PayChannel: payment.PayChannel, // PayChannel åœ¨ proto ä¸­æ˜¯ string ç±»å‹ï¼Œç›´æ¥ä½¿ç”¨
		Status:     s.convertStatusToProto(payment.Status),
		TradeNo:    payment.TradeNo,
		NotifyUrl:  payment.NotifyURL,
		ReturnUrl:  payment.ReturnURL,
		CreatedAt:  timestamppb.New(payment.CreatedAt),
	}

	if payment.PaidAt != nil {
		protoPayment.PaidAt = timestamppb.New(*payment.PaidAt)
	}
	if payment.ExpiredAt != nil {
		protoPayment.ExpiredAt = timestamppb.New(*payment.ExpiredAt)
	}

	return protoPayment
}

// convertStatusToProto è½¬æ¢æ”¯ä»˜çŠ¶æ€ä¸º proto PaymentStatus
func (s *PaymentService) convertStatusToProto(status int8) paymentv1.PaymentStatus {
	switch status {
	case model.PaymentStatusPending:
		return paymentv1.PaymentStatus_PAYMENT_STATUS_PENDING
	case model.PaymentStatusProcessing:
		return paymentv1.PaymentStatus_PAYMENT_STATUS_PROCESSING
	case model.PaymentStatusSuccess:
		return paymentv1.PaymentStatus_PAYMENT_STATUS_SUCCESS
	case model.PaymentStatusFailed:
		return paymentv1.PaymentStatus_PAYMENT_STATUS_FAILED
	case model.PaymentStatusClosed:
		return paymentv1.PaymentStatus_PAYMENT_STATUS_CLOSED
	case model.PaymentStatusRefunded:
		return paymentv1.PaymentStatus_PAYMENT_STATUS_REFUNDED
	default:
		return paymentv1.PaymentStatus_PAYMENT_STATUS_UNSPECIFIED
	}
}

// isDuplicateKeyError æ£€æŸ¥æ˜¯å¦æ˜¯å”¯ä¸€ç´¢å¼•å†²çªé”™è¯¯
func isDuplicateKeyError(err error) bool {
	if err == nil {
		return false
	}
	errStr := err.Error()
	return strings.Contains(errStr, "Duplicate entry") ||
		strings.Contains(errStr, "UNIQUE constraint") ||
		strings.Contains(errStr, "duplicate key")
}

// generatePaymentParamsForLearning ç”Ÿæˆæ”¯ä»˜å‚æ•°ï¼ˆå­¦ä¹ æ¨¡å¼ï¼šæ¨¡æ‹Ÿæ”¯ä»˜å‚æ•°ï¼‰
// åœ¨å®é™…ç”Ÿäº§ç¯å¢ƒä¸­ï¼Œè¿™é‡Œåº”è¯¥è°ƒç”¨ç¬¬ä¸‰æ–¹æ”¯ä»˜SDKï¼ˆå¦‚æ”¯ä»˜å®ã€å¾®ä¿¡æ”¯ä»˜ï¼‰
// å­¦ä¹ æ¨¡å¼ä¸‹è¿”å›æ¨¡æ‹Ÿçš„æ”¯ä»˜URLã€äºŒç»´ç å’Œæ”¯ä»˜å‚æ•°ï¼Œä¾¿äºå‰ç«¯å¼€å‘å’Œæµ‹è¯•
func (s *PaymentService) generatePaymentParamsForLearning(payment *model.Payment, channel *model.PaymentChannel) (payURL, qrCode string, payParams map[string]string) {
	payParams = make(map[string]string)

	// æ ¹æ®æ”¯ä»˜æ¸ é“ç”Ÿæˆä¸åŒçš„æ¨¡æ‹Ÿå‚æ•°
	switch channel.ChannelCode {
	case model.PayChannelWeChat:
		// å¾®ä¿¡æ”¯ä»˜ - å­¦ä¹ æ¨¡å¼æ¨¡æ‹Ÿ
		// H5/PCæ”¯ä»˜URLï¼ˆæ¨¡æ‹Ÿï¼‰
		payURL = fmt.Sprintf("https://pay.weixin.qq.com/learning?payment_no=%s&amount=%.2f&order_no=%s",
			payment.PaymentNo, payment.Amount, payment.OrderNo)

		// äºŒç»´ç ï¼ˆæ¨¡æ‹Ÿå¾®ä¿¡æ”¯ä»˜ç ä¸²ï¼Œå‰ç«¯å¯ä»¥ç”ŸæˆäºŒç»´ç ï¼‰
		qrCode = fmt.Sprintf("weixin://wxpay/bizpayurl?pr=LEARNING_%s", payment.PaymentNo)

		// APPæ”¯ä»˜å‚æ•°ï¼ˆæ¨¡æ‹Ÿï¼‰
		payParams = map[string]string{
			"appId":     channel.AppID,
			"timeStamp": fmt.Sprintf("%d", time.Now().Unix()),
			"nonceStr":  fmt.Sprintf("learning_%s", payment.PaymentNo),
			"package":   fmt.Sprintf("prepay_id=LEARNING_%s", payment.PaymentNo),
			"signType":  "RSA",
			"paySign":   "LEARNING_MODE_SIGNATURE", // å­¦ä¹ æ¨¡å¼ç­¾åï¼ˆéçœŸå®ç­¾åï¼‰
		}

	case model.PayChannelAlipay:
		// æ”¯ä»˜å®æ”¯ä»˜ - å­¦ä¹ æ¨¡å¼æ¨¡æ‹Ÿ
		// H5/PCæ”¯ä»˜URLï¼ˆæ¨¡æ‹Ÿæ”¯ä»˜å®æ²™ç®±ç¯å¢ƒï¼‰
		payURL = fmt.Sprintf("https://openapi.alipaydev.com/gateway.do?payment_no=%s&amount=%.2f&order_no=%s",
			payment.PaymentNo, payment.Amount, payment.OrderNo)

		// äºŒç»´ç ï¼ˆæ¨¡æ‹Ÿæ”¯ä»˜å®äºŒç»´ç URLï¼‰
		qrCode = fmt.Sprintf("https://qr.alipay.com/learning_%s", payment.PaymentNo)

		// APPæ”¯ä»˜å‚æ•°ï¼ˆæ¨¡æ‹Ÿï¼‰
		payParams = map[string]string{
			"app_id":    channel.AppID,
			"method":    "alipay.trade.app.pay",
			"charset":   "utf-8",
			"sign_type": "RSA2",
			"timestamp": time.Now().Format("2006-01-02 15:04:05"),
			"version":   "1.0",
			"biz_content": fmt.Sprintf(`{"out_trade_no":"%s","total_amount":"%.2f","subject":"å­¦ä¹ æ¨¡å¼è®¢å•-%s"}`,
				payment.PaymentNo, payment.Amount, payment.OrderNo),
			"sign": "LEARNING_MODE_SIGNATURE", // å­¦ä¹ æ¨¡å¼ç­¾åï¼ˆéçœŸå®ç­¾åï¼‰
		}

	case model.PayChannelBalance:
		// ä½™é¢æ”¯ä»˜ - ä¸éœ€è¦è·³è½¬ï¼Œç›´æ¥æ‰£æ¬¾
		payURL = ""
		qrCode = ""
		payParams = map[string]string{
			"payment_no": payment.PaymentNo,
			"amount":     fmt.Sprintf("%.2f", payment.Amount),
			"channel":    "balance",
			"note":       "ä½™é¢æ”¯ä»˜ï¼Œæ— éœ€è·³è½¬",
		}

	default:
		// æœªçŸ¥æ¸ é“ï¼Œè¿”å›ç©ºå‚æ•°
		fmt.Printf("âš ï¸ æœªçŸ¥æ”¯ä»˜æ¸ é“: %s\n", channel.ChannelCode)
		return "", "", make(map[string]string)
	}

	// å­¦ä¹ æ¨¡å¼æç¤ºæ—¥å¿—
	fmt.Printf("ğŸ“š [å­¦ä¹ æ¨¡å¼] æ”¯ä»˜å‚æ•°å·²ç”Ÿæˆ - æ”¯ä»˜å•å·: %s, æ¸ é“: %s, é‡‘é¢: %.2f\n",
		payment.PaymentNo, channel.ChannelCode, payment.Amount)
	fmt.Printf("   - PayURL: %s\n", payURL)
	fmt.Printf("   - QRCode: %s\n", qrCode)
	fmt.Printf("   - PayParams: %v\n", payParams)

	return payURL, qrCode, payParams
}
